<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/tv_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volume"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:drawableStart="@drawable/volumen"
            android:drawablePadding="8dp" />

        <SeekBar
            android:id="@+id/seekbar_volume"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/tv_AutoIncription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AutoInsciption"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <Switch
            android:id="@+id/switch_security"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="language"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="16dp" />

        <Spinner
            android:id="@+id/spinnerLanguages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/language_options"
            android:prompt="@string/language_prompt"
            android:spinnerMode="dialog" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text"
        android:textColor="@color/white"
        android:background="@color/black"
        android:padding="10dp"
        android:layout_gravity="end"
        android:layout_margin="16dp"
        android:onClick="saveData"/>
</LinearLayout>
</LinearLayout>