<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/tournament_history">

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/search"
            android:contentDescription="@string/search_tournaments"
            android:onClick="onSearchClick"
            android:layout_gravity="end"/>
    </androidx.appcompat.widget.Toolbar>

    <ListView
        android:id="@+id/tournament_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">



        <Button
            android:id="@+id/search_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_confirm"
            android:onClick="onSearchConfirmClick"/>

    </LinearLayout>

</LinearLayout>